Fri May  3 00:28:10 1996  Mark Eichin  <eichin@cygnus.com>

	* kinit.c (krb5_validate_tgt): new function, takes a credential
	cache with an tgt with the "invalid flag" set, and asks the kdc to
	validate it. Wipes cache and stores only the newly validated
	credential. (After all, there won't be any others, because the
	invalid krbtgt couldn't have gotten them.) Most of the code is
	taken from krb5_mk_req, since it did the right thing.
	(main): add -v option, validates the ticket already in the
	selected cache.

Wed May  1 02:37:17 1996  Mark Eichin  <eichin@cygnus.com>

	* kinit.c (main): add -s starttime option. Have it accept a delta
	time (if the value doesn't parse as a valid timestamp.) Set the
	postdated option as well. get time of day early enough in main so
	the options code can use it. Make the end time relative to the
	start time, if given.
	* kinit.M: document -s option.

Thu Feb 15 12:31:03 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kinit.c (main): Do not free memory until all done using it.

Tue Sep 26 22:19:32 1995  Mark Eichin  <eichin@cygnus.com>

	* kinit.c (KRB5_DEFAULT_LIFE): default life should be 10 hours,
	not eight, for practical/social reasons.

Mon Aug 21 16:49:06 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kinit.c - Use string_to_deltat to parse lifetime arguments so that
		we use common code.  Remove convtime().  Fix gcc -Wall.
	* configure.in - Add -lkadm.
	* kinit.M - Remove restriction on lifetimes.


Fri Jul 7 15:53:29 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling.
	* configure.in - Add KRB5_LIBRARIES.


Thu Jun 15 17:45:47 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Fri Jun  9 18:37:27 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.
